syntax = "proto2";

package tutorial;

option java_package = "samples";
option java_outer_classname = "Protos";

message Person {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}



// Position
message Coordinates {
  optional double x = 1;
  optional double y = 2;
  optional double z = 3;
}

message Position {
  optional Coordinates coordinates = 1;
}


message Key {
  required int32 id = 1;
}

message Value {
  optional double data = 1;
}

message TestMessage {
  map<int32, Value> intMap = 1;
  map<string, Value> stringMap = 2;
}